--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login_text">LOGIN</string>
+    <string name="title_activity_scoreboard">ScoreboardActivity</string>
+    <string name="title_home">Overall</string>
+    <string name="title_dashboard">Culturals</string>
+    <string name="title_notifications">Sports</string>
 </resources>
