Change logout button, and change app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Aaveg 2020</string>
+    <string name="app_name">Aaveg \'20</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 
